created the shop view folder

--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -12,7 +12,7 @@
   <body>
     <!-- inclue the header.ejs partials file  -->
     <header>
-      <%- include('partials/header'); %>
+      <%- include('../partials/header'); %>
     </header>
 
     <h1><%= title %></h1>
